--- a/templates/redoc.html
+++ b/templates/redoc.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReDoc</title>
-    <!-- needed for adaptive design -->
+    <title>SHFA API Documentation</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
-    <!-- ReDoc doesn't change outer page styles -->
     <style>
       body {
         margin: 0;
@@ -16,6 +14,7 @@
   </head>
   <body>
     <redoc spec-url='{% url schema_url %}'></redoc>
-    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
+    <!-- Use a stable version instead of @next -->
+    <script src="https://cdn.jsdelivr.net/npm/redoc@2.1.3/bundles/redoc.standalone.js"></script>
   </body>
 </html>
