--- a/apps/shfa/templates/listmetadataformats.xml
+++ b/apps/shfa/templates/listmetadataformats.xml
@@ -3,7 +3,7 @@
 {% block content %}
     <OAI-PMH xmlns="http://www.openarchives.org/OAI/2.0/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.openarchives.org/OAI/2.0/ http://www.openarchives.org/OAI/2.0/OAI-PMH.xsd">
         <responseDate>{% now "Y-m-d\TH:i:s\Z" %}</responseDate>
-        <request verb="ListMetadataFormats">https://diana.dh.gu.se/api/shfa/OAICat/</request>
+        <request verb="ListMetadataFormats">https://shfa.dh.gu.se/api/shfa/OAICat/</request>
         <ListMetadataFormats>
             {% for metadataformat in metadataformats %}
                 <metadataFormat>
